python-test_driven_development/tests/3-say_my_name.txt
>>> say_my_name = __import__('3-say_my_name').say_my_name

>>> say_my_name("John", "Smith")
My name is John Smith

>>> say_my_name("John", 2)
TypeError: last_name must be a string

>>> say_my_name(3, "dude")
TypeError: first_name must be a string

>>> say_my_name()
TypeError: say_my_name() missing 1 required positional argument: 'first_name'
~                                                                                    
